--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@dfinity/agent": "^2.3.0",
     "@dfinity/auth-client": "^2.3.0",
     "@dfinity/candid": "^2.3.0",
+    "@dfinity/identity": "^2.3.0",
     "@dfinity/principal": "^2.3.0",
     "@hookform/resolvers": "latest",
     "@prisma/client": "^6.4.0",
