--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@dfinity/agent": "^2.3.0",
-    "@dfinity/auth-client": "^2.3.0",
-    "@dfinity/candid": "^2.3.0",
-    "@dfinity/identity": "^2.3.0",
-    "@dfinity/principal": "^2.3.0",
+    "@dfinity/agent": "^2.4.0",
+    "@dfinity/auth-client": "^2.4.0",
+    "@dfinity/candid": "^2.4.0",
+    "@dfinity/identity": "^2.4.0",
+    "@dfinity/ledger-icp": "^2.6.12",
+    "@dfinity/principal": "^2.4.0",
+    "@dfinity/utils": "^2.12.0",
     "@hookform/resolvers": "latest",
+    "@nfid/identitykit": "^1.0.12",
     "@prisma/client": "^6.4.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
@@ -52,10 +55,12 @@
     "embla-carousel-react": "8.5.1",
     "framer-motion": "latest",
     "input-otp": "1.4.1",
+    "install": "^0.13.0",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-auth": "^4.24.11",
     "next-themes": "latest",
+    "npm": "^11.3.0",
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
